<resources>
    <string name="app_name">Horoscope</string>
    <string name="zodiac_name">Zodiac Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="symbol">Symbol</string>
    <string name="month">Month</string>
    <string name="default_month">Default Month</string>
    <string name="default_symbol">Default Symbol</string>
    <string name="default_description">Default Description</string>
    <string name="default_name">Default Name</string>
    <string name="daily_horoscope">Daily Horoscope</string>
    <string name="textview">TextView</string>
    <string name="default_horoscope">Default Horoscope</string>
</resources>